Fix root layout issues with CSS grid

--- a/website/styles/global.scss
+++ b/website/styles/global.scss
@@ -13,9 +13,6 @@ html {
 }
 
 body {
-  display: grid;
-  min-height: 100vh;
-  grid-template-rows: 1fr auto;
   margin: 0;
   background-color: $palette-3;
   color: $color-text;
